# project

LvglWindows/: lv_conf.h
LvglWindowsDesktopApplication/: LvglWindowsDesktopApplication.vcxproj  LvglWindowsDesktopApplication.vcxproj.filters
LvglWindowsSimulator/: LvglWindowsSimulator.cpp  LvglWindowsSimulator.vcxproj  LvglWindowsSimulator.vcxproj.filters  lv_conf.h
ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h  ui_theme_manager.c  ui_theme_manager.h  ui_themes.c  ui_themes.h
ui/components/: ui_comp_hook.c
ui/fonts/: ui_font_Chinese10.c  ui_font_Chinese12.c  ui_font_Chinese14.c  ui_font_Chinese16.c  ui_font_Chinese16B.c  ui_font_Chinese24B.c  ui_font_Chinese32.c  ui_font_Chinese32B.c  ui_font_Chinese44.c  ui_font_Chinese64.c  ui_font_Chinese8.c  ui_font_Chinese96.c
ui/images/: ui_img_aroma_png.c  ui_img_bright_png.c  ui_img_cloud_png.c  ui_img_decom_png.c  ui_img_feed_png.c  ui_img_heater_png.c  ui_img_lamp_png.c  ui_img_level_png.c  ui_img_light_png.c  ui_img_lightboard_png.c  ui_img_main_png.c  ui_img_more_png.c  ui_img_off_png.c  ui_img_pump_fan_png.c  ui_img_pump_png.c  ui_img_pump_shell_png.c  ui_img_setup_png.c  ui_img_temp_png.c  ui_img_trash_png.c  ui_img_uv_png.c
ui/screens/: ui_QR.c  ui_aroma.c  ui_control.c  ui_feed.c  ui_heater.c  ui_light.c  ui_main.c  ui_more.c  ui_pump.c  ui_standby.c  ui_status.c  ui_strat.c  ui_strat.cpp  ui_strat_detail.c  ui_temp.c  ui_waterLevel.c
